--- a/Tuto_theano/Tuto 2.ipynb
+++ b/Tuto_theano/Tuto 2.ipynb
@@ -65,24 +65,11 @@
     "input = 2\n",
     "\n",
     "# On déclare les poids\n",
-    "W = theano.shared(\n",
-    "    value=numpy.zeros(\n",
-    "        (0, 10),\n",
-    "        dtype=theano.config.floatX\n",
-    "    ),\n",
-    "    name='W',\n",
-    "    borrow=True\n",
-    ")\n",
+    "W = ## On utilise une variable partagée initialisée par un tableau de 0 de taille 10 grace à la fonction numpy.zeros\n",
     "\n",
     "# On déclare les biais\n",
-    "b = theano.shared(\n",
-    "    value=numpy.zeros(\n",
-    "        (10,),\n",
-    "        dtype=theano.config.floatX\n",
-    "    ),\n",
-    "    name='b',\n",
-    "    borrow=True\n",
-    ")\n",
+    "b = ## On utilise une variable partagée initialisée par un vecteur de 0 de taille 10 grace à la fonction numpy.zeros\n",
+    "    ## Le parametre borrow doit etre mis a true\n",
     "\n",
     "# On appele la fonction softmax\n",
     "p_y_given_x = T.nnet.softmax(T.dot(input, W) + b)\n",
@@ -187,13 +174,8 @@
     "\n",
     "W_bound = numpy.sqrt(6. / (fan_in + fan_out))\n",
     "\n",
-    "W = theano.shared(\n",
-    "    numpy.asarray(\n",
-    "        numpy.random.uniform(low=-W_bound, high=W_bound, size=filter_shape),\n",
-    "        dtype=theano.config.floatX\n",
-    "    ),\n",
-    "    borrow=True\n",
-    ")"
+    "W = ## On utilise une variable partagée initialisée par grace a la fonction numpy.random.uniform \n",
+    "    ## avec comme bornes [-W_bound,W_bound] et comme taille la taille du filtre, borrow a true"
    ]
   },
   {
@@ -371,11 +353,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Soluce"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# On déclare les poids\n",
+    "W = theano.shared(\n",
+    "    value=numpy.zeros(\n",
+    "        (0, 10),\n",
+    "        dtype=theano.config.floatX\n",
+    "    ),\n",
+    "    name='W',\n",
+    "    borrow=True\n",
+    ")\n",
+    "\n",
+    "# On déclare les biais\n",
+    "b = theano.shared(\n",
+    "    value=numpy.zeros(\n",
+    "        (10,),\n",
+    "        dtype=theano.config.floatX\n",
+    "    ),\n",
+    "    name='b',\n",
+    "    borrow=True\n",
+    ")\n",
+    "\n",
+    "# On appele la fonction softmax\n",
+    "p_y_given_x = T.nnet.softmax(T.dot(input, W) + b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = theano.shared(\n",
+    "    numpy.asarray(\n",
+    "        numpy.random.uniform(low=-W_bound, high=W_bound, size=filter_shape),\n",
+    "        dtype=theano.config.floatX\n",
+    "    ),\n",
+    "    borrow=True\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
@@ -387,14 +428,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
